--- a/asset/css/common.scss
+++ b/asset/css/common.scss
@@ -1,1 +1,47 @@
 @charset "utf-8";
+$_1px: 0.0625rem;
+$_2px: 0.125rem;
+$_3px: 0.1875rem;
+$_4px: 0.25rem;
+$_5px: 0.3125rem;
+$_6px: 0.375rem;
+$_7px: 0.4375rem;
+$_8px: 0.5rem;
+$_9px: 0.5625rem;
+$_10px: 0.625rem;
+$_11px: 0.6875rem;
+$_12px: 0.75rem;
+$_13px: 0.8125rem;
+$_14px: 0.875rem;
+$_15px: 0.9375rem;
+$_16px: 1rem;
+$_18px: 1.125rem;
+$_20px: 1.25rem;
+$_22px: 1.375rem;
+$_24px: 1.5rem;
+$_26px: 1.625rem;
+$_28px: 1.75rem;
+$_30px: 1.875rem;
+$_32px: 2rem;
+$_34px: 2.125rem;
+$_36px: 2.25rem;
+$_38px: 2.375rem;
+$_40px: 2.5rem;
+$_45px: 2.813rem;
+$_50px: 3.125rem;
+$_55px: 3.438rem;
+$_60px: 3.75rem;
+$_70px: 4.375rem;
+$_80px: 5rem;
+$_90px: 5.625rem;
+$_100px: 6.25rem;
+
+$fzBig: 16px;
+$fzBase: $_14px;
+$fzMiddle: 16px;
+$fzSmall: 16px;
+
+@mixin bgBtn(){
+  overflow:hidden;
+  text-indent: -99999px;
+}
