--- a/asset/css/reset.css
+++ b/asset/css/reset.css
@@ -1,13 +1,73 @@
 /* font */
+@font-face {
+  font-family: 'NotoSansKR';
+  font-style: normal;
+  font-weight: 200;
+  src: url("/asset/font/NotoSansKR-Light.eot");
+  src: url("/asset/font/NotoSansKR-Light.eot?#iefix") format("embedded-opentype"), url("/asset/font/NotoSansKR-Light.woff") format("woff"); }
+
+@font-face {
+  font-family: 'NotoSansKR';
+  font-style: normal;
+  font-weight: 400;
+  src: url("/asset/font/NotoSansKR-Regular.eot");
+  src: url("/asset/font/NotoSansKR-Regular.eot?#iefix") format("embedded-opentype"), url("/asset/font/NotoSansKR-Regular.woff") format("woff"); }
+
+@font-face {
+  font-family: 'NotoSansKR';
+  font-style: normal;
+  font-weight: 500;
+  src: url("/asset/font/NotoSansKR-Medium.eot");
+  src: url("/asset/font/NotoSansKR-Medium.eot?#iefix") format("embedded-opentype"), url("/asset/font/NotoSansKR-Medium.woff") format("woff"); }
+
+@font-face {
+  font-family: 'NotoSansKR';
+  font-style: normal;
+  font-weight: 700;
+  src: url("/asset/font/NotoSansKR-Bold.eot");
+  src: url("/asset/font/NotoSansKR-Bold.eot?#iefix") format("embedded-opentype"), url("/asset/font/NotoSansKR-Bold.woff") format("woff"); }
+
+@font-face {
+  font-family: 'NotoSansKR';
+  font-style: normal;
+  font-weight: 700;
+  src: url("/asset/font/NotoSansKR-Bold.eot");
+  src: url("/asset/font/NotoSansKR-Bold.eot?#iefix") format("embedded-opentype"), url("/asset/font/NotoSansKR-Bold.woff") format("woff"); }
+
+@font-face {
+  font-family: 'NotoSansKR';
+  font-style: normal;
+  font-weight: 400;
+  unicode-range: U+0030-0039;
+  src: url("/asset/font/Roboto-Regular.eot");
+  src: url("/asset/font/Roboto-Regular.eot?#iefix") format("embedded-opentype"), url("/asset/font/Roboto-Regular.woff") format("woff"); }
+
+@font-face {
+  font-family: 'NotoSansKR';
+  font-style: normal;
+  font-weight: 600;
+  unicode-range: U+0030-0039;
+  src: url("/asset/font/Roboto-Medium.eot");
+  src: url("/asset/font/Roboto-Medium.eot?#iefix") format("embedded-opentype"), url("/asset/font/Roboto-Medium.woff") format("woff"); }
+
+@font-face {
+  font-family: 'NotoSansKR';
+  font-style: normal;
+  font-weight: 700;
+  unicode-range: U+0030-0039;
+  src: url("/asset/font/Roboto-Bold.eot");
+  src: url("/asset/font/Roboto-Bold.eot?#iefix") format("embedded-opentype"), url("/asset/font/Roboto-Bold.woff") format("woff"); }
+
 /* reset */
 html, body {
-  height: 100%; }
+  height: 100%;
+  font-size: 16px; }
 
 * {
   margin: 0;
   padding: 0;
   letter-spacing: 0;
-  font-family: "RixSGo M","Malgun Gothic","Dotum",sans-serif; }
+  font-family: "NotoSansKR","Malgun Gothic","Dotum",sans-serif; }
 
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td,
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
@@ -18,7 +78,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, nav, sectio
   display: block; }
 
 body {
-  font-family: "RixSGo M","Malgun Gothic","Dotum",sans-serif;
+  font-family: "NotoSansKR","Malgun Gothic","Dotum",sans-serif;
   letter-spacing: 0;
   font-size: 16px;
   line-height: 24px;
@@ -57,7 +117,7 @@ address, cite, code, dfn, em, var {
 
 strong {
   font-style: normal;
-  font-family: "RixSGo B";
+  font-family: "NotoSansKR";
   font-weight: normal; }
 
 ol, ul {
@@ -80,7 +140,7 @@ th {
   font-size: 14px;
   color: #333;
   line-height: 18px;
-  font-family: "RixSGo EB","Dotum",sans-serif;
+  font-family: "NotoSansKR","Dotum",sans-serif;
   letter-spacing: 0;
   vertical-align: top;
   font-weight: normal; }
