--- a/asset/css/common.scss
+++ b/asset/css/common.scss
@@ -1,47 +1,172 @@
-@charset "utf-8";
-$_1px: 0.0625rem;
-$_2px: 0.125rem;
-$_3px: 0.1875rem;
-$_4px: 0.25rem;
-$_5px: 0.3125rem;
-$_6px: 0.375rem;
-$_7px: 0.4375rem;
-$_8px: 0.5rem;
-$_9px: 0.5625rem;
-$_10px: 0.625rem;
-$_11px: 0.6875rem;
-$_12px: 0.75rem;
-$_13px: 0.8125rem;
-$_14px: 0.875rem;
-$_15px: 0.9375rem;
-$_16px: 1rem;
-$_18px: 1.125rem;
-$_20px: 1.25rem;
-$_22px: 1.375rem;
-$_24px: 1.5rem;
-$_26px: 1.625rem;
-$_28px: 1.75rem;
-$_30px: 1.875rem;
-$_32px: 2rem;
-$_34px: 2.125rem;
-$_36px: 2.25rem;
-$_38px: 2.375rem;
-$_40px: 2.5rem;
-$_45px: 2.813rem;
-$_50px: 3.125rem;
-$_55px: 3.438rem;
-$_60px: 3.75rem;
-$_70px: 4.375rem;
-$_80px: 5rem;
-$_90px: 5.625rem;
-$_100px: 6.25rem;
+// custome select 관련 구문
+// Default variables
+$font_size: 14px !default;
+$font_size_small: 12px !default;
 
-$fzBig: 16px;
-$fzBase: $_14px;
-$fzMiddle: 16px;
-$fzSmall: 16px;
+$input_border_radius: 5px !default;
+$input_height: 42px !default;
+$input_height_small: 36px !default;
+$dropdown_padding: 18px !default;
 
-@mixin bgBtn(){
-  overflow:hidden;
-  text-indent: -99999px;
+$gray_dark: #444 !default;
+$gray: #999 !default;
+$gray_light: #e8e8e8 !default;
+$gray_lighter: #f6f6f6 !default;
+$primary_light: $gray !default;
+$arrow_color: $gray !default;
+
+// Style the dropdown
+.nice-select {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: #fff;
+  border-radius: $input_border_radius;
+  border: solid 1px $gray_light;
+  box-sizing: border-box;
+  clear: both;
+  cursor: pointer;
+  display: block;
+  float: left;
+  font-family: inherit;
+  font-size: $font_size;
+  font-weight: normal;
+  height: $input_height;
+  line-height: $input_height - 2;
+  outline: none;
+  padding-left: $dropdown_padding;
+  padding-right: $dropdown_padding + 12;
+  position: relative;
+  text-align: left !important;
+  transition: all 0.2s ease-in-out;
+  user-select: none;
+  white-space: nowrap;
+  width: auto;
+  &:hover {
+    border-color: darken($gray_light, 5%);
+  }
+  &:active, &:focus {
+    border-color: $primary_light;
+  }
+  // Arrow
+  &:after {
+    border-bottom: 2px solid $arrow_color;
+    border-right: 2px solid $arrow_color;
+    content: '';
+    display: block;
+    height: 5px;
+    margin-top: -4px;
+    pointer-events: none;
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform-origin: 66% 66%;
+    transform: rotate(45deg);
+    transition: all 0.15s ease-in-out;
+    width: 5px;
+  }
+
+  &.open {
+    @extend :active;
+    &:after {
+      transform: rotate(-135deg);
+    }
+    .list {
+      opacity: 1;
+      pointer-events: auto;
+      transform: scale(1) translateY(0);
+    }
+  }
+  &.disabled {
+    border-color: lighten($gray_light, 2%);
+    color: $gray;
+    pointer-events: none;
+    &:after {
+      border-color: lighten($arrow_color, 20%);
+    }
+  }
+
+  // Modifiers
+  &.wide {
+    width: 100%;
+    .list {
+      left: 0 !important;
+      right: 0 !important;
+    }
+  }
+  &.right {
+    float: right;
+    .list {
+      left: auto;
+      right: 0;
+    }
+  }
+  &.small {
+    font-size: $font_size_small;
+    height: $input_height_small;
+    line-height: $input_height_small - 2;
+    &:after {
+      height: 4px;
+      width: 4px;
+    }
+    .option {
+      line-height: $input_height_small - 2;
+      min-height: $input_height_small - 2;
+    }
+  }
+
+  // List and options
+  .list {
+    background-color: #fff;
+    border-radius: $input_border_radius;
+    box-shadow: 0 0 0 1px rgba($gray_dark, .11);
+    box-sizing: border-box;
+    margin-top: 4px;
+    opacity: 0;
+    overflow: hidden;
+    padding: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 100%; left: 0;
+    transform-origin: 50% 0;
+    transform: scale(.75) translateY(- $input_height / 2);
+    transition: all .2s cubic-bezier(0.5, 0, 0, 1.25), opacity .15s ease-out;
+    z-index: 9;
+    &:hover .option:not(:hover) {
+      background-color: transparent !important;
+    }
+  }
+  .option {
+    cursor: pointer;
+    font-weight: 400;
+    line-height: $input_height - 2;
+    list-style: none;
+    min-height: $input_height - 2;
+    outline: none;
+    padding-left: $dropdown_padding;
+    padding-right: $dropdown_padding + 11;
+    text-align: left;
+    transition: all 0.2s;
+    &:hover, &.focus, &.selected.focus {
+      background-color: $gray_lighter;
+    }
+    &.selected {
+      font-weight: bold;
+    }
+    &.disabled {
+      background-color: transparent;
+      color: $gray;
+      cursor: default;
+    }
+  }
+}
+
+// Use display instead of opacity for IE <= 10
+.no-csspointerevents .nice-select {
+  .list {
+    display: none;
+  }
+  &.open {
+    .list {
+      display: block;
+    }
+  }
 }
