--- a/asset/css/reset.scss
+++ b/asset/css/reset.scss
@@ -1,5 +1,3 @@
-@charset "utf-8";
-
 /* font */
 @font-face {
   font-family: 'NotoSansKR';
@@ -63,7 +61,7 @@
 
 /* reset */
 html, body {height:100%;font-size: 16px;}
-*{margin:0;padding:0;letter-spacing:0;font-family:"NotoSansKR","Malgun Gothic","Dotum",sans-serif;}
+*{margin:0;padding:0;letter-spacing:0;font-family:"NotoSansKR","Malgun Gothic","Dotum",sans-serif;color: $colorLevel3;}
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,
 article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0}
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block}
@@ -82,4 +80,4 @@ th{text-align:left;font-size:14px;color:#333;line-height:18px;font-family:"NotoS
 th label{font-family:"RixSGo EB","Dotum",sans-serif;}
 td{text-align:left;color:#333;line-height:22px;vertical-align:top}
 dt {font-weight:normal;}
-label em{color:#929292;}
+a{ text-decoration: none; color: $colorLevel2}
