--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -1,6 +1,2 @@
-@charset "utf-8";
-
-@import url("reset.css");
-@import url("common.css");
-@import url("layout.css");
-@import url("contents.css");
+@import "mixin.scss", "reset.scss", "common.scss", "layout.scss", "contents.scss";
+@import "jquery.mCustomScrollbar.css";
