--- a/asset/css/contents.scss
+++ b/asset/css/contents.scss
@@ -39,15 +39,27 @@
     }
 
     .theadBox{
+        border-radius: 8px;
+        margin-bottom:10px;
+        background:#fff;
         .th{
-            padding-top:16px;
-            padding-bottom:16px;
+            padding-top:13px;
+            padding-bottom:13px;
+            color:$colorLevel2;
         }
     }
     .tbodyBox{
+        border-radius: 8px;        
+        background:#fff;
         .item{
-            position: relative;            
-            &:hover::after{
+            position: relative; 
+            &:hover{
+                z-index:5;
+                .td{
+                    border-bottom-color: transparent;
+                }
+            }
+            &:hover::before{
                 display: block;
                 content: "";
                 width: calc(100% - 4px);
@@ -56,30 +68,55 @@
                 top: -1px;
                 left: 0;
                 border:2px solid #fe5855;
+                z-index: -1;
             }
         }
         .td{
             padding-top:13px;
             padding-bottom:13px;
             border-bottom:1px solid #ededf4;
+            letter-spacing: -0.025em;
         }
         .name{
             text-align:left;
             a{
-                font-size:18px;
+                font-size:$_18px;
+                letter-spacing: -0.1em;
             }
         }
     }
 }
 
-/* iconCircle */
-.iconCircle{
+/* btnCircle */
+.btnCircle{
     display: inline-block;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    text-indent: -9999px;
+    border:1px solid #eaeaea;
     >span{
-        display: inline-block;
-        width: 38px;
-        height: 38px;
-        border-radius: 50%;
-        text-indent: -9999px;
+        display: inline-block;        
+    }
+    &.on{
+        border:none;
+    }
+    &.like{
+        background: url(../images/common/icon_like_off.png) no-repeat center center;        
+    }
+    &.like.on{
+        background:#ffe4e3 url(../images/common/icon_like_on.png) no-repeat center center;
+    }
+    &.analysis{
+        background: url(../images/common/icon_analysis_off.png) no-repeat center center;
+    }
+    &.analysis.on{
+        background:#ffe4e3 url(../images/common/icon_analysis_on.png) no-repeat center center;
+    }
+    &.agree{
+        background: url(../images/common/icon_agree_off.png) no-repeat 10px center;
+    }    
+    &.agree.on{
+        background:#ffe4e3 url(../images/common/icon_agree_on.png) no-repeat 10px center;
     }
 }
