--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -479,16 +479,36 @@ a {
   padding-right: 0;
 }
 
+.listTableType .theadBox {
+  border-radius: 8px;
+  margin-bottom: 10px;
+  background: #fff;
+}
+
 .listTableType .theadBox .th {
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  color: #333333;
+}
+
+.listTableType .tbodyBox {
+  border-radius: 8px;
+  background: #fff;
 }
 
 .listTableType .tbodyBox .item {
   position: relative;
 }
 
-.listTableType .tbodyBox .item:hover::after {
+.listTableType .tbodyBox .item:hover {
+  z-index: 5;
+}
+
+.listTableType .tbodyBox .item:hover .td {
+  border-bottom-color: transparent;
+}
+
+.listTableType .tbodyBox .item:hover::before {
   display: block;
   content: "";
   width: calc(100% - 4px);
@@ -497,12 +517,14 @@ a {
   top: -1px;
   left: 0;
   border: 2px solid #fe5855;
+  z-index: -1;
 }
 
 .listTableType .tbodyBox .td {
   padding-top: 13px;
   padding-bottom: 13px;
   border-bottom: 1px solid #ededf4;
+  letter-spacing: -0.025em;
 }
 
 .listTableType .tbodyBox .name {
@@ -510,18 +532,49 @@ a {
 }
 
 .listTableType .tbodyBox .name a {
-  font-size: 18px;
+  font-size: 1.125rem;
+  letter-spacing: -0.1em;
+  color: #333333;
 }
 
-/* iconCircle */
-.iconCircle {
-  display: inline-block;
-}
-
-.iconCircle > span {
+/* btnCircle */
+.btnCircle {
   display: inline-block;
   width: 38px;
   height: 38px;
   border-radius: 50%;
   text-indent: -9999px;
+  border: 1px solid #eaeaea;
+}
+
+.btnCircle > span {
+  display: inline-block;
+}
+
+.btnCircle.on {
+  border: none;
+}
+
+.btnCircle.like {
+  background: url(../images/common/icon_like_off.png) no-repeat center center;
+}
+
+.btnCircle.like.on {
+  background: #ffe4e3 url(../images/common/icon_like_on.png) no-repeat center center;
+}
+
+.btnCircle.analysis {
+  background: url(../images/common/icon_analysis_off.png) no-repeat center center;
+}
+
+.btnCircle.analysis.on {
+  background: #ffe4e3 url(../images/common/icon_analysis_on.png) no-repeat center center;
+}
+
+.btnCircle.agree {
+  background: url(../images/common/icon_agree_off.png) no-repeat 10px center;
+}
+
+.btnCircle.agree.on {
+  background: #ffe4e3 url(../images/common/icon_agree_on.png) no-repeat 10px center;
 }
