--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -534,7 +534,112 @@ a {
 .listTableType .tbodyBox .name a {
   font-size: 1.125rem;
   letter-spacing: -0.1em;
+}
+
+/* 가입현황 */
+.insurance {
+  width: 782px;
+  height: 130px;
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.insurance:hover:before {
+  display: block;
+  content: "";
+  width: calc(100% - 4px);
+  height: calc(100% - 4px);
+  border: 2px solid #fd5856;
+  border-radius: 8px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-box-shadow: 7px 7px 9px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 7px 7px 9px 0px rgba(0, 0, 0, 0.12);
+}
+
+.insurance:after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.insurance .info {
+  float: left;
+  width: 527px;
+  height: 100%;
+  padding: 17px 30px 0;
+  background: #fff;
+  border-radius: 8px 0 0 8px;
+}
+
+.insurance .info .logo {
+  display: block;
+  height: 34px;
+}
+
+.insurance .info .logo img {
+  height: 100%;
+}
+
+.insurance .info .name {
+  font-size: 1.25rem;
   color: #333333;
+}
+
+.insurance .info .date .state {
+  display: inline-block;
+  background: #ffeeed;
+  width: 47px;
+  height: 22px;
+  line-height: 20px;
+  text-align: center;
+  color: #fd795c;
+  font-size: 0.875rem;
+  margin-right: 10px;
+}
+
+.insurance .payment {
+  float: right;
+  width: 253px;
+  height: 100%;
+  padding: 17px 30px 0;
+  background: #fff;
+  border-radius: 0 8px 8px 0;
+}
+
+.insurance .payment li {
+  display: table;
+  width: 100%;
+  line-height: 22px;
+  color: #aaaaaa;
+  letter-spacing: -0.025em;
+}
+
+.insurance .payment li span {
+  display: table-cell;
+  font-size: 0.875rem;
+}
+
+.insurance .payment li .th {
+  width: 70px;
+}
+
+.insurance .payment li .td {
+  text-align: right;
+}
+
+.insurance .payment li.top {
+  color: #333333;
+}
+
+.insurance .payment li.top .td {
+  font-size: 1.25rem;
+}
+
+.insurance .payment li.top .td strong {
+  font-size: 1.375rem;
+  font-weight: 700;
 }
 
 /* btnCircle */
